--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   ],
   "author": "Bruno Celeste",
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
     "nodeunit": "^0.11.3"
   }
 }
