--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "author": "Bruno Celeste",
   "license": "MIT",
   "dependencies": {
-    "mocha": "^8.3.2"
+    "mocha": "10.1.0"
   },
   "scripts": {
     "test": "mocha coconut.test.js"
